--- a/PerformanceTest/PerformanceTest/PerformanceTest.vcxproj
+++ b/PerformanceTest/PerformanceTest/PerformanceTest.vcxproj
@@ -104,13 +104,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.236.0\Include;lib\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;C:\VulkanSDK\1.3.236.0\Include;lib\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\VulkanSDK\1.3.236.0\Lib;lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;vulkan-1.lib;spirv-cross-cored.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -121,16 +122,37 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>src;C:\VulkanSDK\1.3.236.0\Include;lib\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\VulkanSDK\1.3.236.0\Lib;lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;vulkan-1.lib;spirv-cross-core.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="PerformanceTest.cpp" />
+    <ClCompile Include="src\glad.c" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\vulkan_impl\vma_implementation.cpp" />
+    <ClCompile Include="src\vulkan_impl\vulkan_core_buffer.cpp" />
+    <ClCompile Include="src\vulkan_impl\vulkan_core_context.cpp" />
+    <ClCompile Include="src\vulkan_impl\vulkan_core_framebuffer.cpp" />
+    <ClCompile Include="src\vulkan_impl\vulkan_core_image.cpp" />
+    <ClCompile Include="src\vulkan_impl\vulkan_core_pipeline.cpp" />
+    <ClCompile Include="src\vulkan_impl\vulkan_core_renderpass.cpp" />
+    <ClCompile Include="src\vulkan_impl\vulkan_core_shader_module.cpp" />
+    <ClCompile Include="src\vulkan_impl\vulkan_core_shader_pack.cpp" />
+    <ClCompile Include="src\vulkan_impl\vulkan_core_swapchain.cpp" />
+    <ClCompile Include="src\vulkan_impl\vulkan_utils.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\vk_mem_alloc.h" />
+    <ClInclude Include="src\vulkan_impl\vulkan_core.h" />
+    <ClInclude Include="src\vulkan_impl\vulkan_utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
